# CertoraProver

./: .gitmodules  Liav  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.circleci/: config.yml
Public/: skip_checks.csv
Public/CITests/: testCertoraClient.py  testCertoraUtils.py  testMutateClient.py  testSolanaClient.py
Public/TestEVM/AddressFunctionCallsAmbig/: Contracts.sol  Contracts.spec  Default.conf  expectedDefault.json
Public/TestEVM/CVLCompilation/: ConflictWithFunctionNames.sol  ConflictWithFunctionNames.spec  HeadersVsBody.spec  SignedCalldatasize.sol  SignedCalldatasize.spec  SignedCalldatasizeNoABIEncoder.sol  dummy.sol  zeroAddress.spec
Public/TestEVM/Clz/: C.conf  C.sol  C.spec  C_bv.conf  expectedC.json
Public/TestEVM/DuplicateContractNames/: A.sol  AnotherA.sol  B.sol  Default.conf  expectedDefault.json
Public/TestEVM/ExtendedLinking/: Default.conf
Public/TestEVM/ExtensionContracts/: Base1.sol  Base2.sol  Default.conf  Extension1.sol  Extension2.sol  Immutable.sol  OverrideExtended.sol  OverrideExtended.spec  expectedDefault.json  expectedOverrideExtended.json  test.spec
Public/TestEVM/Fallback/: A.conf  AOptimistic.conf  B.conf  BOptimistic.conf  (+20 more)
Public/TestRanger/: C.sol  Default.conf  SucceedingLessThanFive.conf  SucceedingLessThanFiveParamConditional.conf  SucceedingWithHook.conf  SucceedingWithMapping.conf  SucceedingWithMappingQuantified.conf  ViolatedLessThanFive.conf  ViolatedLessThanFiveParamConditionalWithRequire.conf  expectedDefault.json  expectedDefault.txt  expectedDefaultWithMerging.json  expectedSucceedingLessThanFive.json  expectedSucceedingLessThanFiveParamConditional.json  expectedSucceedingWithHook.json  expectedSucceedingWithMapping.json  expectedSucceedingWithMappingQuantified.json  expectedViolatedLessThanFive.json  expectedViolatedLessThanFiveParamConditionalWithRequire.json
Public/TestSolana/CeilDivTest/: Cargo.toml  Default.conf  certora_build.sh  expectedDefault.json  justfile
Public/TestSolana/CeilDivTest/src/: ceil_div.rs
Public/TestSolana/CpisTest/: Cargo.toml  Default.conf  certora_build.sh  cvlr_inlining_core.txt  cvlr_summaries_core.txt  expectedDefault.json  justfile
Public/TestSolana/CpisTest/src/: processor.rs  spec.rs
Public/TestSolana/ScalarPredicateTest/: Cargo.toml  Default.conf  certora_build.sh  expectedDefault.json  justfile
Public/TestSolana/ScalarPredicateTest/src/: stack_array.rs
Public/TestSoroban/Meridian2024-workshop/: Cargo.toml  Default.conf
Public/TestSoroban/Meridian2024-workshop/src/certora/: spec.rs
Public/TestSoroban/i128FromVal/: Cargo.toml  expectedDefault.analysis
fried-egg/: Cargo.toml
scripts/: certoraConcordance.py  certoraSuiProver.py  certora_cli_publish.py  certora_cli_pypi_test.sh  certora_cli_requirements.txt
scripts/CertoraProver/: certoraBuild.py  certoraBuildCacheManager.py  certoraBuildSui.py  certoraCloudIO.py  certoraContext.py  certoraContextAttributes.py  certoraContextValidator.py
scripts/Concordance/: concordance.py
scripts/Gimli-DWARF-JSONDump/: Cargo.toml  README.md
scripts/Mutate/: mutateApp.py
scripts/Shared/: certoraUtils.py  certoraValidateFuncs.py
scripts/concordance/: README.md  Test.sol  logger.py  main.py  requirements.txt  solc.py  state.py
scripts/python_lint/: python_lint_requirements.txt
src/test/resources/solana/debugger_tests/: Cargo.toml  README.md  certora_build  cvt_inlining.txt  cvt_summaries.txt  justfile  run.conf
src/test/resources/solana/debugger_tests/src/: lib.rs
src/test/resources/solana/debugger_tests/src/certora/spec/: mod.rs  rule_add_with_function.rs  rule_add_with_function_at_level2.rs  rule_array_test.rs  rule_array_test2.rs  rule_array_test3.rs  rule_array_test4.rs  rule_array_test5.rs  rule_basic_add_always_inline.rs  rule_basic_add_inline_never.rs  rule_enums.rs  rule_large_struct.rs  rule_large_struct_inlined.rs  rule_log_printing.rs  rule_loop.rs  rule_macro_property.rs  rule_middle_struct.rs  rule_mutability.rs  rule_nested_struct.rs  rule_nested_struct2.rs  rule_nondet_account_array.rs  rule_option_type.rs  rule_reference_type.rs  rule_result_type.rs  rule_simple_add.rs  rule_simple_recursion.rs  rule_single_account.rs  rule_single_account_as_heap.rs  rule_struct_packed.rs  rule_struct_passing.rs  rule_struct_passing2.rs  structs.rs
(+1864 files in other folders)
