[package]
name = "cpis"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/spec.rs"

[profile.dev]
split-debuginfo = "unpacked"

[features]
certora = []

[dependencies]
cvlr = "0.4"
cvlr-solana = { git = "https://github.com/Certora/cvlr-solana/", branch = "v0.5" }
solana-program = "2.2"
spl-token = { git = "https://github.com/Certora/cvlr-solana/", branch = "v0.5", package = "cvlr-spl-token" }
spl-token-2022 = { version = "3", features = ["no-entrypoint"] }

[package.metadata.certora]
sources = ["Cargo.toml", "src/**/*.rs"]
solana_inlining = ["./cvt_inlining_core.txt"]
solana_summaries = ["./cvt_summaries_core.txt"]
