[package]
name = "certora-meridian24-token"
version = "0.0.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies.cvlr]
version = "=0.5.0"
default-features = false

[dependencies.cvlr-soroban-derive]
version = "=0.4.0"

[dependencies.soroban-sdk]
version = "=22.0.9"

[features]
certora = []

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
