[package]
name = "i128-to-from-val"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[profile.release]
opt-level = 2
overflow-checks = true
debug = 0
strip = "none"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[features]
certora = []

[dependencies.cvlr]
version = "=0.5.0"
default-features = false

[dependencies.cvlr-soroban-derive]
version = "=0.4.0"

[dependencies.soroban-sdk]
version = "=22.0.9"

[dependencies.soroban-env-guest]
version = "=22.1.3"
